AppMenu: add accessibility descriptions to zoom buttons

Right now these inherit their descriptions from NSAddTemplate and
NSRemoveTemplate, which have generic "add" / "remove" alt text. This change
adds accessibility descriptions to the buttons to give more context to screen
reader users.

BUG=598499

Review URL: https://codereview.chromium.org/1884383003

Cr-Commit-Position: refs/heads/master@{#387731}

Former-commit-id: a29ffe1fea6e29b204665c52caa3e63d052ecd1c